# hksc-disassembler

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: check.yml
docs/: havokscript.md  havokscript_opcodes.md  havokscript_types.md
src/hksc_disassembler/: __init__.py
src/hksc_disassembler/cli/: disassembler.py  instruction_printer.py
src/hksc_disassembler/common/: reader.py
src/hksc_disassembler/loader/: hs.py  hs_constant.py  hs_debug.py  hs_enum.py  hs_function.py  hs_header.py  hs_instruction.py  hs_opcodes.py  hs_structure.py  hs_type_reader.py
tests/: test_cli.py  test_parsing.py
tests/files/: hsc_example.luac  luas_example.luac
